2008-09-15  Martin Rudalics  <rudalics@gmx.at>

	* files.el (file-truename): Don't raise args-out-of-range error
	when filename has no separator on windows-nt.  (Bug#982)

2008-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-find-file-name): Rename `batch' to `noprompt' and
	be more honest when we don't know.
	(diff-tell-file-name): Don't prompt before the actual prompt.
	(diff-mode): Don't prompt in add-log-buffer-file-name-function.
	(diff-find-source-location): Add `noprompt' argument.
	(diff-current-defun): Don't prompt.

2008-09-14  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-mark-face, proced-marked-face)
	(proced-sort-header-face): Remove.
	(proced-font-lock-keywords): Simplify.
	(proced-format): Use face proced-sort-header.
	(proced-format-interactive, proced-sort-interactive)
	(proced-filter-interactive): Only call proced-update if the scheme
	has changed.
	(proced-sort-header): Use posn-actual-col-row.

2008-09-14  Martin Rudalics  <rudalics@gmx.at>

	* add-log.el (change-log-find-window): New variable.
	(change-log-goto-source-1, change-log-goto-source):
	Set change-log-find-window to window displaying source.
	(change-log-next-error): Select window specified by
	change-log-find-window.

2008-09-13  Martin Rudalics  <rudalics@gmx.at>

	* frame.el (select-frame-set-input-focus): With focus follows
	mouse move mouse cursor to right window.
	* window.el (pop-to-buffer): Select window before calling
	select-frame-set-input-focus.

2008-09-12  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-sort-header): New face.
	(proced-sort-header-face): New variable.
	(proced-format): Allow format value nil.
	Use proced-sort-header-face for header of sort column.
	(proced-format-args): New function.
	(proced-grammar-alist, proced-timer-flag, proced-process-alist)
	(proced-header-help-echo, proced-field-help-echo, proced-timer)